Fixed intranet search result spacing

--- a/src/components/IntranetResultSummary.module.scss
+++ b/src/components/IntranetResultSummary.module.scss
@@ -45,7 +45,7 @@
         ul{
             list-style: none;
             li{
-                height: 50px;
+                height: 30px;
                 a, a:hover, a:visited{
                     font-weight: 600;
                     font-size: 14px;
